--- a/client/style.css
+++ b/client/style.css
@@ -13,5 +13,8 @@
     width: 80px;
     height: 80px;
     margin: 10px;
-    background-color: #32CD32; /* verde */
+    background-color:darkgray ;
+    border-style: solid;
+    border-width: 5px;
+    border-color: black;
 }
